<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.marzin.jacques.revlang.FormesActivity">
    <item android:id="@+id/action_themes" android:title="@string/action_themes"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mots" android:title="@string/action_mots"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_verbes" android:title="@string/action_verbes"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_revision" android:title="@string/action_revision"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_statistiques" android:title="@string/action_statistiques"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_parametrage" android:title="@string/action_parametrage"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
